--- a/pages/shoppingCar/index.wxml
+++ b/pages/shoppingCar/index.wxml
@@ -2,7 +2,7 @@
 <view class="body_bg"></view>
 <!-- 购物车为空 -->
 
- <view wx:if="{{!hasList}}" class="page page_padding">
+ <view wx:if="{{!hasList}}" class="page page_padding font_size">
   <view class="page_header">
     <image src="../../img/shoppingCarK.png"></image>
     <view>购物车还是空的</view>
@@ -12,7 +12,7 @@
 
 
 <!-- 购物车结算 -->
-<view wx:if="{{hasList}}" class="page padding_b">
+<view wx:if="{{hasList}}" class="page padding_b font_size">
 
   <view class="page__hd title">
     <view class="float_left">
@@ -33,12 +33,12 @@
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
             <navigator url="../details/details?id={{item.id}}" hover-class="weui-cell_active">
               <view class="weui-media-box__title">
-                <text class="float_left">{{item.title}}</text>
-                <text>￥{{item.price}}</text>
+                <text class="float_left">{{item.title}}{{item.title}}{{item.title}}</text>
+                <text class="float_right">￥{{item.price}}</text>
               </view>
             </navigator>
             <view wx:if="{{editOrComplete==='编辑'}}" class="weui-media-box__title">
-              <!-- <text class="float_left">500ml/瓶</text> -->
+               <text class="float_left">500ml/瓶</text> 
               <text>*{{item.num}}</text>
             </view>
 
@@ -53,41 +53,12 @@
           </view>
         </view>
 
-
-        <!-- <view class="weui-media-box weui-media-box_appmsg">
-          <radio color="#FF6319" checked="true" />
-          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="weui-media-box__thumb" src="{{icon60}}" />
-          </view>
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
-            <navigator url='' hover-class="weui-cell_active">
-              <view class="weui-media-box__title">
-                <text class="float_left">商品名称</text>
-                <text>￥50.00</text>
-              </view>
-            </navigator>
-            <view wx:if="{{editOrComplete==='编辑'}}" class="weui-media-box__title">
-              <text class="float_left">500ml/瓶</text>
-              <text>*1</text>
-            </view>
-
-             <view wx:if="{{editOrComplete==='完成'}}" class='weui-media-box__title'>
-              <view class='details__bottom__buyCard__jz'>
-                <text data-status='subtraction' style='color:rgb(246, 76, 22)' bindtap='jzNum'>-</text>
-                <text style='color:rgb(135, 135, 135)'>{{shoppingNumber}}</text>
-                <text data-status='addition' style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap='jzNum'>+</text>
-              </view>
-            </view> 
-
-          </view>
-        </view> -->
-
         <view class="bottom_way">
-          <view class="float_left text_right fl_left">合计￥：
+          <view class="text_right fl_left">合计￥：
             <text class="sumPrice">{{totalPrice}}</text>
           </view>
-          <view wx:if="{{editOrComplete==='编辑'}}" class="float_left fl_right" bindtap=''>结算</view>
-          <view wx:if="{{editOrComplete==='完成'}}" class="float_left fl_right delbgColor" bindtap='toDelCount'>删除</view>
+          <view wx:if="{{editOrComplete==='编辑'}}" class="fl_right" bindtap=''>结算</view>
+          <view wx:if="{{editOrComplete==='完成'}}" class="fl_right delbgColor" bindtap='toDelCount'>删除</view>
         </view>
       </view>
     </view>
