--- a/pages/shoppingCar/index.wxss
+++ b/pages/shoppingCar/index.wxss
@@ -24,12 +24,20 @@
   padding: 0 30rpx;
   line-height: 80rpx;
 }
+
 .text_right {
   text-align: right;
 }
 
 .float_left {
+  display: block;
   float: left;
+  text-align: left;
+  width: 330rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
 }
 
 .float_right {
@@ -48,6 +56,7 @@
 
 .fl_left {
   width: 70%;
+  float: left;
   background: #fff;
 }
 
@@ -57,6 +66,7 @@
 }
 
 .fl_right {
+  float: right;
   width: 30%;
   text-align: center;
   color: #fff;
@@ -71,6 +81,7 @@
 .details__bottom__buyCard__jz > text {
   padding-right: 60rpx;
 }
-.delbgColor{
+
+.delbgColor {
   background: #f00;
 }
