--- a/pages/login/authentication/authentication.wxml
+++ b/pages/login/authentication/authentication.wxml
@@ -21,6 +21,6 @@
   </view>
 
   <view class="margin_top100">
-    <button class="weui-btn orange_color" bindtap=""> 立即认证</button>
+    <button class="weui-btn orange_color" bindtap="toLinkAutOk"> 立即认证</button>
   </view>
 </view>
