--- a/pages/login/register/register.wxml
+++ b/pages/login/register/register.wxml
@@ -27,6 +27,6 @@
   </view>
 
   <view class="margin_top100">
-    <button class="weui-btn orange_color" bindtap=""> 下一步</button>
+    <button class="weui-btn orange_color" bindtap="toLinkAut"> 下一步</button>
   </view>
 </view>
