--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,9 +5,9 @@
     <!-- swiper -->
     <view class="swiper">
       <swiper indicator-dots="{{swiperData.indicatorDots}}" autoplay="{{swiperData.autoplay}}" interval="{{swiperData.interval}}" duration="{{swiperData.duration}}">
-        <block wx:for="{{imgUrls}}" wx:key="*this" bindtap='linkDetails'>
+        <block wx:for="{{imgDataList}}" wx:key="*this">
           <swiper-item>
-            <image src="{{item}}" class="slide-image" />
+            <image data-id='{{item.id}}' src="{{item.imgUrl}}" class="slide-image" bindtap='linkDetails'/>
           </swiper-item>
         </block>
       </swiper>
@@ -44,12 +44,12 @@
 
     <!-- shop -->
     <view class='shop__list__container'>
-      <view class='shop__list' wx:for="{{[1,2,3,4,5,6,7]}}" wx:key='*this' bindtap='linkDetails'>
-        <image src='../../img/listDef.png' />
+      <view data-id='{{item.id}}' class='shop__list' wx:for="{{shopListInfo}}" wx:key='*this' bindtap='linkDetails'>
+        <image src='{{item.imgUrl}}' />
         <view class='shop__text'>
-          <view>商品名称</view>
+          <view>{{item.title}}</view>
           <view class='active shop__text__price'>
-            <text>26</text>
+            <text>{{item.price}}</text>
             <text style='margin-left:15rpx;'>元/瓶</text>
           </view>
         </view>
