--- a/pages/login/register/register.wxml
+++ b/pages/login/register/register.wxml
@@ -8,15 +8,16 @@
   <view>
     <view>手机号</view>
     <view>
-      <input class="tel_input" placeholder="请输入手机号" />
+      <input maxlength="11" class="tel_input" type="number" placeholder="请输入手机号" bindinput="bindKeyPhone"/>
     </view>
   </view>
 
   <view class="margin_top40">
     <view class="weui-label">验证码</view>
     <view>
-      <input class="vcode_input" placeholder="请输入验证码" />
-      <view class="vcode-btn">获取验证码</view>
+      <input class="vcode_input" placeholder="请输入验证码" bindinput="bindKeyVcode"/>
+      <view wx:if="{{second>0}}" class="vcode-btn">重新发送（{{second}}）</view>
+      <view wx:else class="vcode-btn" bindtap="startCountdown">获取验证码</view>
     </view>
   </view>
 
