--- a/pages/user/address/address.wxml
+++ b/pages/user/address/address.wxml
@@ -7,31 +7,34 @@
 
 
       <!-- <view class="weui-panel__hd">图文组合列表</view> -->
-      <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+      <view class="weui-panel__bd" wx:for="{{addressList}}">
+        <view  class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active"
+        data-index="{{index}}" bindtap="editAdr">
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">
-              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
+              <text class="weui-media-box__name">{{item.consignee}}</text>
+              <text class="float_right">{{item.phone}}</text> </view>
             <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX陕西省西安市碑林区XXXXXXXXXX陕西省西安市碑林区XXXXXXXXXX</text>
+              <text>{{item.location}} {{item.detailedAddress}}</text>
             </view>
 
           </view>
-        </navigator>
+        </view>
         <view class="button_view clear">
           <view class="isCheck float_left">
-            <!-- <image src="../../../img/success.png"></image> -->
-            <radio color="#FF6319" checked="true" />设为默认地址
+            <image wx:if="{{item.status ==2}}" src="../../../img/success.png" data-index="{{index}}"  bindtap="cancelDefaultAdr"></image> 
+            <image wx:if="{{item.status !==2}}" src="../../../img/unSuccess.png" data-index="{{index}}" bindtap="defaultAdr"></image>
+            <text> 设为默认地址</text>
+            <!-- <radio color="#FF6319" checked="true" />设为默认地址 -->
           </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
+          <button size="mini" data-index="{{index}}" bindtap="editAdr">编辑</button>
+          <button size="mini" data-index="{{index}}" bindtap="deleteAdr">删除</button>
         </view>
       </view>
 
 
 
-      <view class="weui-panel__bd">
+      <!-- <view class="weui-panel__bd">
         <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">
@@ -45,7 +48,7 @@
         </navigator>
         <view class="button_view clear">
           <view class="isCheck float_left">
-            <!-- <image src="../../../img/success.png"></image> -->
+
             <radio color="#FF6319" />设为默认地址
           </view>
           <button size="mini">编辑</button>
@@ -57,7 +60,7 @@
         <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">
-                <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
+              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
               <text class="float_right">15222222222</text> </view>
             <view class="weui-media-box__title">
               <text>陕西省西安市碑林区XXXXXXXXXX</text>
@@ -67,30 +70,6 @@
         </navigator>
         <view class="button_view clear">
           <view class="isCheck float_left">
-            <!-- <image src="../../../img/success.png"></image> -->
-            <radio color="#FF6319" />设为默认地址
-          </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
-        </view>
-      </view>
-
-
-      <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">
-               <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
-            <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX</text>
-            </view>
-
-          </view>
-        </navigator>
-        <view class="button_view clear">
-          <view class="isCheck float_left">
-            <!-- <image src="../../../img/success.png"></image> -->
             <radio color="#FF6319" />设为默认地址
           </view>
           <button size="mini">编辑</button>
@@ -103,7 +82,7 @@
         <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">
-               <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
+              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
               <text class="float_right">15222222222</text> </view>
             <view class="weui-media-box__title">
               <text>陕西省西安市碑林区XXXXXXXXXX</text>
@@ -113,7 +92,6 @@
         </navigator>
         <view class="button_view clear">
           <view class="isCheck float_left">
-            <!-- <image src="../../../img/success.png"></image> -->
             <radio color="#FF6319" />设为默认地址
           </view>
           <button size="mini">编辑</button>
@@ -126,7 +104,7 @@
         <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">
-                <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
+              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
               <text class="float_right">15222222222</text> </view>
             <view class="weui-media-box__title">
               <text>陕西省西安市碑林区XXXXXXXXXX</text>
@@ -136,13 +114,35 @@
         </navigator>
         <view class="button_view clear">
           <view class="isCheck float_left">
-            <!-- <image src="../../../img/success.png"></image> -->
             <radio color="#FF6319" />设为默认地址
           </view>
           <button size="mini">编辑</button>
           <button size="mini">删除</button>
         </view>
       </view>
+
+
+      <view class="weui-panel__bd">
+        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+            <view class="weui-media-box__title">
+              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
+              <text class="float_right">15222222222</text> </view>
+            <view class="weui-media-box__title">
+              <text>陕西省西安市碑林区XXXXXXXXXX</text>
+            </view>
+
+          </view>
+        </navigator>
+        <view class="button_view clear">
+          <view class="isCheck float_left">
+
+            <radio color="#FF6319" />设为默认地址
+          </view>
+          <button size="mini">编辑</button>
+          <button size="mini">删除</button>
+        </view>
+      </view> -->
 
 
     </view>
