--- a/pages/user/addAddress/addAddress.wxml
+++ b/pages/user/addAddress/addAddress.wxml
@@ -3,73 +3,76 @@
 <view class="page">
   <view class="page__bd">
 
-    <view class="weui-cells one_weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input weui-cell_warn">
-        <view class="weui-cell__hd">
-          <view class="_weui-label">收货人姓名</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="" />
-        </view>
-      </view>
-    </view>
-
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input weui-cell_warn">
-        <view class="weui-cell__hd">
-          <view class="_weui-label">手机号码</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="" />
+    <form bindsubmit="formSubmit">
+      <view class="weui-cells one_weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="_weui-label">收货人姓名</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input name="consignee" value='{{editAddress.consignee}}' class="weui-input" placeholder="" />
+          </view>
         </view>
       </view>
-    </view>
 
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input weui-cell_warn">
-        <view class="weui-cell__hd">
-          <view class="_weui-label">省、市、区</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="" />
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="_weui-label">手机号码</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input name="phone" value='{{editAddress.phone}}' class="weui-input" placeholder="" maxlength="11" type="number" />
+          </view>
         </view>
       </view>
-    </view>
 
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input weui-cell_warn">
-        <view class="weui-cell__hd">
-          <view class="_weui-label">街道</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="" />
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="_weui-label">省、市、区</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" placeholder="" />
+          </view>
         </view>
       </view>
-    </view>
 
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input weui-cell_warn">
-        <view class="weui-cell__hd">
-          <view class="_weui-label">邮政编码</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="" />
-        </view>
-      </view>
-    </view>
-
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell">
-        <view class="weui-cell__bd">
-        <view class="_weui-label">详细地址</view>
-          <textarea class="weui-textarea" placeholder="" style="height: 3.3em" />
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="_weui-label">街道</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input name="location" value='{{editAddress.location}}' class="weui-input" placeholder="" />
+          </view>
         </view>
       </view>
-    </view>
 
-    <view class="weui-btn-area">
-      <button class="weui-btn orange_color"  bindtap="showTopTips">保存</button>
-    </view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="_weui-label">邮政编码</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" placeholder="" />
+          </view>
+        </view>
+      </view>
+
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell">
+          <view class="weui-cell__bd">
+            <view class="_weui-label">详细地址</view>
+            <textarea name="detailedAddress" value='{{editAddress.detailedAddress}}' class="weui-textarea" placeholder="" style="height: 3.3em" />
+          </view>
+        </view>
+      </view>
+
+      <view class="weui-btn-area">
+        <button class="orange_color" formType="submit">保存</button>
+      </view>
+
+    </form>
 
   </view>
 </view>
