--- a/pages/user/order/order.wxss
+++ b/pages/user/order/order.wxss
@@ -34,8 +34,12 @@
   border-bottom: 1px solid #e0e0e0;
 }
 
-
 .button_view button {
   margin: 6px 10px 6px 0;
   overflow: visible;
+  border-radius: 0;
+}
+
+button::after {
+  border-radius: 0;
 }
