更新 删除 和 编辑收货地址

--- a/pages/login/authentication/authentication.wxml
+++ b/pages/login/authentication/authentication.wxml
@@ -2,25 +2,28 @@
 <view class="body_bg"></view>
 <view class="page page_padding">
 
-  <view class="margin_top40">
-    <view>姓名</view>
-    <view>
-      <input class="tel_input" placeholder="请输入姓名" />
+  <form bindsubmit="formSubmit">
+    <view class="margin_top80">
+      <view>姓名</view>
+      <view>
+        <input name="realName" class="tel_input" placeholder="请输入姓名" />
+      </view>
     </view>
-  </view>
 
-  <view class="margin_top40">
-    <view>身份证号</view>
-    <view>
-      <input class="tel_input" type="idcard" maxlength="18" placeholder="请输入身份证号" />
+    <view class="margin_top40">
+      <view>身份证号</view>
+      <view>
+        <input name="idCard"  class="tel_input" type="idcard" maxlength="18" placeholder="请输入身份证号" />
+      </view>
     </view>
-  </view>
 
-  <view class="readed">
-    <view>我们将根据实名信息,为您购买《用车保险》。 </view>
-  </view>
+    <view class="readed">
+      <view>我们将根据实名信息,为您购买《用车保险》。 </view>
+    </view>
 
-  <view class="margin_top100">
-    <button class="weui-btn orange_color" bindtap="toLinkAutOk"> 立即认证</button>
-  </view>
+    <view class="margin_top100">
+      <button class="weui-btn orange_color" formType="submit" > 立即认证</button>
+    </view>
+  </form>
+
 </view>
