修改 地址成功回调

--- a/pages/user/address/address.wxml
+++ b/pages/user/address/address.wxml
@@ -8,8 +8,7 @@
 
       <!-- <view class="weui-panel__hd">图文组合列表</view> -->
       <view class="weui-panel__bd" wx:for="{{addressList}}">
-        <view  class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active"
-        data-index="{{index}}" bindtap="editAdr">
+        <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active" data-index="{{index}}" bindtap="editAdr">
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
             <view class="weui-media-box__title">
               <text class="weui-media-box__name">{{item.consignee}}</text>
@@ -17,12 +16,11 @@
             <view class="weui-media-box__title">
               <text>{{item.location}} {{item.detailedAddress}}</text>
             </view>
-
           </view>
         </view>
         <view class="button_view clear">
           <view class="isCheck float_left">
-            <image wx:if="{{item.status ==2}}" src="../../../img/success.png" data-index="{{index}}"  bindtap="cancelDefaultAdr"></image> 
+            <image wx:if="{{item.status ==2}}" src="../../../img/success.png" data-index="{{index}}" bindtap="cancelDefaultAdr"></image>
             <image wx:if="{{item.status !==2}}" src="../../../img/unSuccess.png" data-index="{{index}}" bindtap="defaultAdr"></image>
             <text> 设为默认地址</text>
             <!-- <radio color="#FF6319" checked="true" />设为默认地址 -->
@@ -32,123 +30,11 @@
         </view>
       </view>
 
-
-
-      <!-- <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">
-              <text class="weui-media-box__name">谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
-            <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX</text>
-            </view>
-
-          </view>
-        </navigator>
-        <view class="button_view clear">
-          <view class="isCheck float_left">
-
-            <radio color="#FF6319" />设为默认地址
-          </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
-        </view>
-      </view>
-
-      <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">
-              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
-            <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX</text>
-            </view>
-
-          </view>
-        </navigator>
-        <view class="button_view clear">
-          <view class="isCheck float_left">
-            <radio color="#FF6319" />设为默认地址
-          </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
-        </view>
-      </view>
-
-
-      <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">
-              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
-            <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX</text>
-            </view>
-
-          </view>
-        </navigator>
-        <view class="button_view clear">
-          <view class="isCheck float_left">
-            <radio color="#FF6319" />设为默认地址
-          </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
-        </view>
-      </view>
-
-
-      <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">
-              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
-            <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX</text>
-            </view>
-
-          </view>
-        </navigator>
-        <view class="button_view clear">
-          <view class="isCheck float_left">
-            <radio color="#FF6319" />设为默认地址
-          </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
-        </view>
-      </view>
-
-
-      <view class="weui-panel__bd">
-        <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__title">
-              <text class="weui-media-box__name">谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋谁是大傻蛋</text>
-              <text class="float_right">15222222222</text> </view>
-            <view class="weui-media-box__title">
-              <text>陕西省西安市碑林区XXXXXXXXXX</text>
-            </view>
-
-          </view>
-        </navigator>
-        <view class="button_view clear">
-          <view class="isCheck float_left">
-
-            <radio color="#FF6319" />设为默认地址
-          </view>
-          <button size="mini">编辑</button>
-          <button size="mini">删除</button>
-        </view>
-      </view> -->
-
-
     </view>
   </view>
 
   <view class="reative_bottom">
     <button class="weui-btn orange_color" size="default" bindtap="toLinkAddAddr"> 新增收货地址</button>
   </view>
+
 </view>
