--- a/pages/index/confirm/confirm.wxml
+++ b/pages/index/confirm/confirm.wxml
@@ -10,8 +10,8 @@
 
     <!-- address -->
     <view class='confirm__address__info'>
-      <text style='display:block'>收货人 : 朱燕妮 <text class='confirm__address__tel'>15319781855</text></text>
-      <text>收货地址 : 陕西省西安市碑林区陕西省西安市碑林区</text>
+      <text style='display:block'>收货人 : {{defAddressInfo.consignee}} <text class='confirm__address__tel'>{{defAddressInfo.phone}}</text></text>
+      <text>收货地址 : {{defAddressInfo.location}} {{defAddressInfo.detailedAddress}}</text>
     </view>
     <!-- address end -->
 
@@ -24,29 +24,33 @@
     <!-- choose end -->
 
     <!-- shop info -->
-    <view class='confirm__shop__info'>
-      <view class='confirm__shop__image'>
-        <image src='../../../img/listDef.png' />
+    <block wx:for='{{[1,2,3,4]}}' wx:key='*this'>
+      <view class='confirm__shop__info'>
+        <view class='confirm__shop__image'>
+          <image src='../../../img/listDef.png' />
+        </view>
+        <view class='confirm__shop__name'>
+          <text>商品名称商品名</text>
+          <text style='display:block'>500ml/瓶</text>
+        </view>
+        <view class='confirm__shop__num'>
+          <view>¥ 1180.00</view>
+          <view style='color:rgb(135, 135, 135)'>x1</view>
+        </view>
       </view>
-      <view class='confirm__shop__name'>
-        <text>商品名称商品名称商品名称500ml/瓶</text>
-      </view>
-      <view class='confirm__shop__num'>
-        <view>¥ 1180.00</view>
-        <view style='color:rgb(135, 135, 135)'>x1</view>
-      </view>
-    </view>
+    </block>
+
     <!-- shop info end -->
 
     <!-- num -->
-    <view class='details__bottom__buyCard__num'>
+    <!-- <view class='details__bottom__buyCard__num'>
       <text class='details__bottom__buyCard__text'>购买数量</text>
       <view class='details__bottom__buyCard__jz'>
         <text data-status='subtraction' style='color:rgb(246, 76, 22)' bindtap='jzNum'>-</text>
         <text style='color:rgb(135, 135, 135)'>{{shoppingNumber}}</text>
         <text data-status='addition' style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap='jzNum'>+</text>
       </view>
-    </view>
+    </view> -->
     <!-- num end -->
 
     <!-- coupon -->
@@ -55,7 +59,6 @@
       <text class='confirm__coupon__num'>-10.00</text>
     </view>
     <!-- coupon end -->
-
 
     <view class='confirm__bottom'>
       <view class='confirm__bottom__left'>
