--- a/pages/user/order/order.wxss
+++ b/pages/user/order/order.wxss
@@ -42,3 +42,15 @@
 button::after {
   border-radius: 0;
 }
+
+
+
+.weui-media-box::before {
+  border-top: 0;
+}
+.small_title{
+  font-size: 15px;
+}
+.margin_right{
+  margin-right: 10px;
+}
