--- a/pages/user/order/order.wxml
+++ b/pages/user/order/order.wxml
@@ -8,8 +8,12 @@
 
       <view class="weui-panel__bd" wx:for="{{ordersLists}}" wx:for-item="ordersLists">
         <view class="weui-media-box__bd weui-media-box__bd_in-appmsg ">
-          <view class="weui-media-box__title text_ringht margin_right">等待买家付款</view>
-
+          <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==1}}">等待买家付款</view>
+          <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==2}}">等待卖家发货</view>
+          <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==3}}">等待买家收货</view>
+          <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==4}}">交易成功</view>
+          <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==5}}">订单正在取消</view>
+          <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==6}}">订单已取消</view>
           <block wx:for="{{ordersLists.orderGoods}}" wx:for-item="orderGoods">
             <navigator url="/pages/index/details/details?id={{orderGoods.goodsId}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
               <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
@@ -33,10 +37,27 @@
             <text>合计：<text>￥{{ordersLists.price}}</text></text>
           </view>
         </view>
-        <view class="button_view clear">
+        <view class="button_view clear" wx:if="{{ordersLists.status==1}}">
           <button size="mini">取消订单</button>
-          <button size="mini">付款</button>
+          <button size="mini" class="orange">付款</button>
         </view>
+        <view class="button_view clear" wx:if="{{ordersLists.status==2}}">
+          <button size="mini" class="orange">提醒发货</button>
+        </view>
+        <view class="button_view clear" wx:if="{{ordersLists.status==3}}">
+          <button size="mini">查看物流</button>
+          <button size="mini" class="orange">确认收货</button>
+        </view>
+        <view class="button_view clear" wx:if="{{ordersLists.status==4}}">
+          <button size="mini">删除订单</button>
+        </view>
+        <view class="button_view clear" wx:if="{{ordersLists.status==5}}">
+          <button size="mini">删除订单</button>
+        </view>
+        <view class="button_view clear" wx:if="{{ordersLists.status==6}}">
+          <button size="mini">删除订单</button>
+        </view>
+
       </view>
 
 
